classDiagram
    %% Core Message and Manager Classes
    class LogMessage {
        -string app_name
        -string context
        -chrono::time_point timestamp
        -LogType severity
        -string message
        +LogMessage(app_name, context, severity, timestamp, message)
        +operator<<(ostream, LogMessage)
        +~LogMessage()
    }

    class LogType {
        <<enumeration>>
        INFO
        WARNING
        ERROR
    }

    class LogManager {
        -vector~LogMessage~ logs
        -vector~unique_ptr~ILogSink~~ sinks
        +LogManager()
        +~LogManager()
        +addLog(LogMessage)
        +addSink(unique_ptr~ILogSink~)
        +routeLogsForAllSinks()
    }

    %% Sink Interface and Implementations
    class ILogSink {
        <<interface>>
        +write(LogMessage)* void
        +~ILogSink()
    }

    class ConsoleSink {
        +write(LogMessage) void
    }

    class FileSink {
        -ofstream file
        +FileSink(filePath, mode)
        +~FileSink()
        +write(LogMessage) void
    }

    %% Telemetry Source Interface and Implementations
    class ITelemetrySource {
        <<interface>>
        +openSource()* bool
        +readSource(string&)* bool
        +~ITelemetrySource()
    }

    class FileTelemetrySourceImpl {
        -string filePath
        -unique_ptr~SafeFile~ filePtr
        +FileTelemetrySourceImpl(path)
        +openSource() bool
        +readSource(string&) bool
        +~FileTelemetrySourceImpl()
    }

    class SocketTelemetrySourceImpl {
        -string filePath
        -unique_ptr~SafeSocket~ socketPtr
        +SocketTelemetrySourceImpl(path)
        +openSource() bool
        +readSource(string&) bool
        +~SocketTelemetrySourceImpl()
    }

    %% RAII Wrapper Classes
    class SafeFile {
        -int filefd
        +SafeFile(RefFilePath)
        +SafeFile(SafeFile&&)
        +operator=(SafeFile&&)
        +IsOpen() bool
        +Read() string
        +~SafeFile()
    }

    class SafeSocket {
        -int socketfd
        +SafeSocket(RefFilePath)
        +SafeSocket(SafeSocket&&)
        +operator=(SafeSocket&&)
        +IsOpen() bool
        +Read() string
        +~SafeSocket()
    }

    %% Relationships
    LogMessage ..> LogType : uses
    LogManager o-- LogMessage : contains
    LogManager o-- ILogSink : contains
    
    ILogSink <|.. ConsoleSink : implements
    ILogSink <|.. FileSink : implements
    
    ITelemetrySource <|.. FileTelemetrySourceImpl : implements
    ITelemetrySource <|.. SocketTelemetrySourceImpl : implements
    
    FileTelemetrySourceImpl o-- SafeFile : contains
    SocketTelemetrySourceImpl o-- SafeSocket : contains
    
    ILogSink ..> LogMessage : uses
